# icarus-framework

./: .gitattributes  .gitignore  .mailmap  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  test_all.py
.github/: dependabot.yml
.github/workflows/: ci.yml
about/: ARCHITECTURE.md  PARSERS.md
docs/: PRODUCTION_AUDIT.md  RESOLVER_CALIBRATION.md
docs/public-release-audit/: DECISIONS_REQUIRED.md  EXECUTIVE_SUMMARY.md  FINDINGS.md  RELEASE_CHECKLIST.md  TEST_MATRIX.md  THREAT_MODEL.md
examples/: custom_parser.py  ios_quickstart.py
icarus/: __init__.py  __main__.py
icarus/core/: __init__.py  atomize.py  differ.py  matching.py  pipeline.py  query.py  registry.py  resolver.py  resolver_eval.py  schema.py
icarus/integrations/: __init__.py  hygeia.py  stix_export.py
icarus/parsers/: __init__.py  base.py  ios.py  linux.py  linux.yaml  macho.py  macos.py  macos.yaml  manifest.py  testing.py  windows.py  windows.yaml
icarus/parsers/catalog/: parsers-devel.json  parsers.json  update_catalog.py
icarus/parsers/cloud/: __init__.py  cloudtrail.py  cloudtrail.yaml
icarus/parsers/cloud/aws/: __init__.py  cloudtrail.py  cloudtrail.yaml
icarus/parsers/generic/: __init__.py  archive_parser.py  archive_parser.yaml  binary_entropy_parser.py  binary_entropy_parser.yaml  json_parser.py  json_parser.yaml  sqlite_parser.py  sqlite_parser.yaml  xml_parser.py  xml_parser.yaml
icarus/parsers/network/: __init__.py  deploy_scripts.py  deploy_scripts.yaml  privacy_stack.py  privacy_stack.yaml
icarus/parsers/schema/: __init__.py  parser_manifest.schema.json
schema/: icarus_schema.sql
tests/: test_atomize.py  test_cloudtrail.py  test_core.py  test_diff_completeness.py  test_diff_natural_keys.py  test_fk_enforcement.py  test_generic.py  test_harness.py  test_harness_backlog.py  test_harness_relationships.py  test_hostile_inputs.py  test_hygeia_integration.py  test_init.py  test_macos.py  test_manifest.py  test_matching.py  test_network.py  test_packaging.py  test_parser_accuracy.py  test_provenance.py  test_query_readonly.py  test_registry.py  test_relationships.py  test_resolve_scored.py  test_resolver.py  test_resolver_coverage.py  test_resolver_eval.py  test_resolver_wiring.py  test_resume_fingerprint.py  test_san09_atoms_fts.py  test_schema_migration_parity.py  test_stix.py
tests/fixtures/cloud_aws_cloudtrail/: sample.json
tests/fixtures/generic_xml/: data.xml
tests/fixtures/linux/lib/systemd/system/: test.service
tests/fixtures/network_deploy_scripts/: deploy_a.py  deploy_b.py
tests/fixtures/network_privacy_stack/: AGENTS.md
tests/fixtures/network_privacy_stack/dashboard/: app.py
tests/fixtures/network_privacy_stack/pihole/: adlists.txt
tests/fixtures/network_privacy_stack/scripts/: deploy.py
tests/fixtures/network_privacy_stack/sudoers/: picontrol.sudoers
tests/fixtures/network_privacy_stack/systemd/: picontrol.service
tests/fixtures/network_privacy_stack/ufw/: user.rules
tests/fixtures/network_privacy_stack/unbound/: unbound.conf
tests/fixtures/windows/: config.json  readme.txt
tests/golden/: cloud_aws_cloudtrail.json  generic_archive.json  generic_binary.json  generic_json.json  generic_sqlite.json  generic_xml.json  linux.json  macos.json  network_deploy_scripts.json  network_privacy_stack.json  windows.json
wiki/: CLI-Reference.md  Getting-Started.md  Home.md  Parser-Ecosystem.md  Query-Reference.md  STIX-Export.md  Schema-Reference.md  Validation-Results.md
