[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icarus-framework"
version = "4.0.0b1"
description = "Extract entities from structured data sources into queryable SQLite databases"
readme = "README.md"
license = {text = "PolyForm-Noncommercial-1.0.0"}
requires-python = ">=3.10"
authors = [
    {name = "Indegosblade"},
]
keywords = ["intelligence", "analysis", "sqlite", "diffing", "security", "ontology", "entities"]
dependencies = [
    "hygeia @ git+https://github.com/Indegosblade/HYGEIA.git@518e55b48036844808f911613727cd7a7c1d4e0d",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Repository = "https://github.com/Indegosblade/icarus-framework"
Issues = "https://github.com/Indegosblade/icarus-framework/issues"

[project.scripts]
icarus = "icarus.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "bandit>=1.7",
    "build>=1.0",
    "stix2>=3.0.1,<4",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = true
# Pared to the codes that currently fire on pre-existing (untyped-def) code
# outside this pass's scope: operator/index/attr-defined in hygeia.py and
# schema.py's Windows-only ctypes.windll access, var-annotated in
# resolver.py/pipeline.py collection literals. "assignment" was dropped —
# a full run with disable_error_code=[] surfaces zero [assignment] errors,
# so it was suppressing nothing.
disable_error_code = ["operator", "attr-defined", "var-annotated", "index"]

[tool.bandit]
exclude_dirs = ["tests"]
# B608 (SQL injection via string-built queries) is intentionally NOT skipped:
# this codebase builds SQL with f-strings pervasively and B608 is the exact
# bug class it is prone to. Genuinely-safe call sites get a targeted
# `# nosec B608` with a one-line justification instead of a blanket skip.
skips = ["B101", "B110", "B112", "B404", "B603", "B607"]

[tool.setuptools.packages.find]
include = ["icarus*"]

[tool.setuptools.package-data]
# Parser manifests, the manifest JSON Schema, and the parser catalogs are runtime
# data, not just source: the registry loads each <module>.yaml at import,
# manifest.py reads schema/parser_manifest.schema.json, and the catalog tooling
# reads catalog/*.json. Without these the built wheel ships only .py files, so every
# manifest load fails and parser tiers/specificities are lost on an installed
# package. Declared per-package (each dir is a real package) so bdist_wheel copies
# them; MANIFEST.in carries the same files into the sdist.
icarus = ["py.typed"]
"icarus.parsers" = ["*.yaml"]
"icarus.parsers.cloud.aws" = ["*.yaml"]
"icarus.parsers.generic" = ["*.yaml"]
"icarus.parsers.network" = ["*.yaml"]
"icarus.parsers.schema" = ["*.json"]
"icarus.parsers.catalog" = ["*.json"]
